--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@ background-color:rgb(0, 238, 255);
 </ol>
 <ol>
 <h1>Flash Games</h1>
- <li><a href=" "><button>click to play  </button></a>
- <li><a href=" "><button>click to play  </button></a>
- <li><a href=" "><button>click to play  </button></a>
+ <li><a href=" "><button>click to play (no game hear)/button></a>
+ <li><a href=" "><button>click to play(no game hear)  </button></a>
+ <li><a href=" "><button>click to play (no game hear) </button></a>
  <li><a href="https://www.friv.com/z/flash/electricman/game.html?Desktop-x-x-w-a-x-xx "><button>click to play Electricman  </button></a>
  <li><a href="https://www.friv.com/z/flash/shatterbot/game.html?Desktop-x-x-w-a-x-xx "><button>click to play Shatterbot </button></a>
        
